force-app/main/default/objects/PDForm__c/PDForm__c.object-meta.xml
<CustomObject>
    <label>PD Form</label>
    <nameField>
        <label>PD Form</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PD Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>