force-app/main/default/objects/PDForm__c/fields/Accessibility_needs_description__c.field-meta.xml
<CustomField>
    <fullName>Accessibility_needs_description__c</fullName>
    <description>Please describe any accessibility needs.</description>
    <label>Accessibility needs description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>