force-app/main/default/objects/PDForm__c/fields/Active_NYS_Membership__c.field-meta.xml
<CustomField>
    <fullName>Active_NYS_Membership__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active NYS Membership</label>
    <type>Checkbox</type>
</CustomField>