force-app/main/default/objects/PDForm__c/fields/Age_range_of_youth_served__c.field-meta.xml
<CustomField>
    <fullName>Age_range_of_youth_served__c</fullName>
    <description>Age range of youth served (check all that apply):</description>
    <label>Age range of youth served:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Early Care</fullName>
            </value>
            <value>
                <fullName>Preschool</fullName>
            </value>
            <value>
                <fullName>Elementary School</fullName>
            </value>
            <value>
                <fullName>Middle School</fullName>
            </value>
            <value>
                <fullName>High School</fullName>
            </value>
            <value>
                <fullName>We do not serve youth</fullName>
            </value>
            <value>
                <fullName>ALL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>