force-app/main/default/objects/PDForm__c/fields/Aspire_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Aspire_ID_Number__c</fullName>
    <description>Aspire ID Number</description>
    <label>Aspire ID Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>