force-app/main/default/objects/PDForm__c/fields/BlackAfrican_American_youth_served__c.field-meta.xml
<CustomField>
    <fullName>BlackAfrican_American_youth_served__c</fullName>
    <description>Number of Black/African-American youth served at your site</description>
    <label>Black/African-American youth served:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>