force-app/main/default/objects/PDForm__c/fields/CheckoutSession__c.field-meta.xml
<CustomField>
    <fullName>CheckoutSession__c</fullName>
    <label>CheckoutSession</label>
    <length>100</length>
    <type>Text</type>
</CustomField>