force-app/main/default/objects/PDForm__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>First_Name__c + &apos; &apos; + Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>