force-app/main/default/objects/PDForm__c/fields/Full_Names_List__c.field-meta.xml
<CustomField>
    <fullName>Full_Names_List__c</fullName>
    <formula>Full_Name__c &amp; &quot;, &quot; &amp; PD_Names_List__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Names List</label>
    <type>Text</type>
</CustomField>