force-app/main/default/objects/PDForm__c/fields/Girls_served__c.field-meta.xml
<CustomField>
    <fullName>Girls_served__c</fullName>
    <description>Number of girls served at your site</description>
    <label>Girls served:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>