force-app/main/default/objects/PDForm__c/fields/Host_PD_Form__c.field-meta.xml
<CustomField>
    <fullName>Host_PD_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Host PD Form</label>
    <referenceTo>PDForm__c</referenceTo>
    <relationshipLabel>PD Forms</relationshipLabel>
    <relationshipName>PD_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>