force-app/main/default/objects/PDForm__c/fields/If_Another_not_listed__c.field-meta.xml
<CustomField>
    <fullName>If_Another_not_listed__c</fullName>
    <description>If &apos;Another not listed&apos;, please enter pronouns</description>
    <label>If &apos;Another not listed&apos;</label>
    <length>255</length>
    <type>Text</type>
</CustomField>