force-app/main/default/objects/PDForm__c/fields/IndigenousNative_American_youth_served__c.field-meta.xml
<CustomField>
    <fullName>IndigenousNative_American_youth_served__c</fullName>
    <description>Number of Indigenous/Native American youth served at your site</description>
    <label>Indigenous/Native American youth served:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>