force-app/main/default/objects/PDForm__c/fields/LatinoHispanic_youth_served__c.field-meta.xml
<CustomField>
    <fullName>LatinoHispanic_youth_served__c</fullName>
    <description>Number of Latino/Hispanic youth served at your site</description>
    <label>Latino/Hispanic youth served:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>