force-app/main/default/objects/PDForm__c/fields/Low_income_youth_served__c.field-meta.xml
<CustomField>
    <fullName>Low_income_youth_served__c</fullName>
    <description>Number of low-income youth served at your site</description>
    <label>Low-income youth served:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>