force-app/main/default/objects/PDForm__c/fields/Nonbinarytransgender_youth_served__c.field-meta.xml
<CustomField>
    <fullName>Nonbinarytransgender_youth_served__c</fullName>
    <description>Number of gender nonbinary or transgender youth served at your site</description>
    <label>Nonbinary/transgender youth served:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>