force-app/main/default/objects/PDForm__c/fields/NYS_Membership_Choice__c.field-meta.xml
<CustomField>
    <fullName>NYS_Membership_Choice__c</fullName>
    <label>NYS Membership?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
            <value>
                <fullName>I&apos;d like to join</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>