force-app/main/default/objects/PDForm__c/fields/PD_Emotional_Intelligence__c.field-meta.xml
<CustomField>
    <fullName>PD_Emotional_Intelligence__c</fullName>
    <label>PD Emotional Intelligence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>