force-app/main/default/objects/PDForm__c/fields/PD_Encouraging_Positive_Behaviors__c.field-meta.xml
<CustomField>
    <fullName>PD_Encouraging_Positive_Behaviors__c</fullName>
    <label>PD Encouraging Positive Behaviors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>