force-app/main/default/objects/PDForm__c/fields/PD_Form_Type__c.field-meta.xml
<CustomField>
    <fullName>PD_Form_Type__c</fullName>
    <label>PD Form Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Training Forms</fullName>
            </value>
            <value>
                <fullName>SLI</fullName>
            </value>
            <value>
                <fullName>H&amp;S Training</fullName>
            </value>
            <value>
                <fullName>STEAM Trainings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>