force-app/main/default/objects/PDForm__c/fields/PD_Health_Safety_Training__c.field-meta.xml
<CustomField>
    <fullName>PD_Health_Safety_Training__c</fullName>
    <label>PD Health &amp; Safety Training</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>