force-app/main/default/objects/PDForm__c/fields/PD_Names_List__c.field-meta.xml
<CustomField>
    <fullName>PD_Names_List__c</fullName>
    <label>PD Names List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>