force-app/main/default/objects/PDForm__c/fields/PD_Site_Leader_Institute__c.field-meta.xml
<CustomField>
    <fullName>PD_Site_Leader_Institute__c</fullName>
    <label>PD Site Leader Institute</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>