force-app/main/default/objects/PDForm__c/fields/PD_Supervision_of_Children_in_School_Age__c.field-meta.xml
<CustomField>
    <fullName>PD_Supervision_of_Children_in_School_Age__c</fullName>
    <label>PD Supervision of Children in School-Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>