force-app/main/default/objects/PDForm__c/fields/PD_TTAP_Training__c.field-meta.xml
<CustomField>
    <fullName>PD_TTAP_Training__c</fullName>
    <label>PD TTAP Training</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>