force-app/main/default/objects/PDForm__c/fields/PD_Virtual_Trainings_2_5_hours__c.field-meta.xml
<CustomField>
    <fullName>PD_Virtual_Trainings_2_5_hours__c</fullName>
    <label>PD Virtual Trainings - 2.5 hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>