force-app/main/default/objects/PDForm__c/fields/Policy_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Policy_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I have read and agree to the above policies/statements.</description>
    <label>Policy Agreement</label>
    <type>Checkbox</type>
</CustomField>