force-app/main/default/objects/PDForm__c/fields/Preferred_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_First_Name__c</fullName>
    <description>Preferred First Name (if different from above)</description>
    <label>Preferred First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>