force-app/main/default/objects/PDForm__c/fields/Program_City__c.field-meta.xml
<CustomField>
    <fullName>Program_City__c</fullName>
    <description>Program City</description>
    <label>Program City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>