force-app/main/default/objects/PDForm__c/fields/Program_State__c.field-meta.xml
<CustomField>
    <fullName>Program_State__c</fullName>
    <description>Program State</description>
    <label>Program State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>