force-app/main/default/objects/PDForm__c/fields/Rural_youth_served__c.field-meta.xml
<CustomField>
    <fullName>Rural_youth_served__c</fullName>
    <description>Number of rural youth served at your site</description>
    <label>Rural youth served:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>