force-app/main/default/objects/PDForm__c/fields/Staff_Level__c.field-meta.xml
<CustomField>
    <fullName>Staff_Level__c</fullName>
    <description>Staff Level</description>
    <label>Staff Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Front Line</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
            <value>
                <fullName>Executive Director</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>