force-app/main/default/objects/PDForm__c/fields/Submission_Status__c.field-meta.xml
<CustomField>
    <fullName>Submission_Status__c</fullName>
    <formula>TEXT( Form_Response__r.b3f__Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submission Status</label>
    <type>Text</type>
</CustomField>