force-app/main/default/objects/PDForm__c/fields/Youth_served__c.field-meta.xml
<CustomField>
    <fullName>Youth_served__c</fullName>
    <description>Number of youth served at your site</description>
    <label>Youth served:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>